--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gd-bs-vue",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Extends the gd-bs Bootstrap JavaScript components to vue js components.",
   "main": "src/index.js",
   "scripts": {
@@ -12,16 +12,19 @@
     "type": "git",
     "url": "git+https://github.com/gunjandatta/gd-bs-vue.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "Bootstrap",
+    "Vue",
+    "VueJS"
+  ],
+  "author": "Gunjan Datta <me@dattabase.com> (https://dattabase.com)",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gunjandatta/gd-bs-vue/issues"
   },
   "homepage": "https://github.com/gunjandatta/gd-bs-vue#readme",
   "dependencies": {
-    "gd-bs": "^3.0.7",
-    "vue": "^2.6.11"
+    "gd-bs": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -32,6 +35,7 @@
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
+    "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
