--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gd-bs-vue",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Extends the gd-bs Bootstrap JavaScript components to vue js components.",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "webpack --mode=development",
     "prod": "webpack --mode=production",
