--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/gunjandatta/gd-bs-vue#readme",
   "dependencies": {
-    "gd-bs": "^3.0.8"
+    "gd-bs": "^3.0.8",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -35,8 +36,8 @@
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.0",
-    "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
