--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "gd-bs": "*",
     "vue": "*",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.0.2"
+    "vue-class-component": "*",
+    "vue-property-decorator": "*"
   }
 }
